tests/reference/asr-test_return1-2603c9e.stderr
semantic error: Type Mismatch in return, found ('f64' and 'i32')
 --> tests/errors/test_return1.py:4:5
  |
4 |     return x
  |     ^^^^^^^^ 
